--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,48 +1,40 @@
-$font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-$background-color-lightgray: lightgray;
-$font-size-small: 10px;
-$font-size-medium: 15px;
-$font-size-large: 28px;
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-h1, h2, h3 {
-  font-family: $font-family;
-}
-
 h1 {
-  margin: 2% 0;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  margin-bottom: 2%;
+  margin-top: 2%;
   padding-left: 20px;
 }
 
 h2 {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   padding-bottom: 10px;
   padding-left: 20px;
 }
 
 h3 {
-  padding-bottom: 0;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  padding-bottom: 0px;
 }
 
-section {
-  .banner {
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-    position: relative;
-    display: block;
+section .banner {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+  display: block;
+}
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-  }
+.banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .div2 {
@@ -55,15 +47,17 @@ section {
 
 .div3 {
   display: grid;
-  grid-area: 2 / 1 / 2 / 1;
+  grid-area: 2/1/2/1;
 }
 
 .ingredients {
-  grid-column: span 2 / span 2;
-  font-family: $font-family;
+  grid-column: span 2/span 2;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   align-items: center;
-  padding: 10px 20px 20px;
-  background-color: $background-color-lightgray;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  background-color: lightgray;
   border-radius: 0 0 20px 20px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -71,76 +65,91 @@ section {
   text-align: left;
   width: auto;
   overflow: hidden;
+}
 
-  .checkbox-group {
-    display: inline-flex;
-    align-items: center;
-    margin-bottom: 5px;
+.checkbox-group {
+  display: inline-flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
 
-    label {
-      margin-left: 10px;
-    }
-  }
+.checkbox-group label {
+  margin-left: 10px;
 }
 
 .time {
   grid-column-start: 3;
-  font-family: $font-family;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   align-items: center;
   padding-top: 20px;
+}
 
-  h2 {
-    font-size: 20px;
-  }
+.time h2 {
+  font-size: 20px;
+}
 
-  img {
-    width: 23px;
-  }
+.time img {
+  width: 23px;
+}
 
-  .time-text {
-    font-size: $font-size-large;
-  }
-
-  .time-intervals {
-    display: flex;
-    justify-content: flex-start;
-    margin: 0;
-    padding: 5px 0;
-
-    .interval {
-      width: 20px;
-      height: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: $background-color-lightgray;
-      color: black;
-      font-size: $font-size-small;
-      font-weight: bold;
-      margin: 0 5px;
-    }
-  }
-
-  .start-time {
-    font-size: $font-size-small;
-    background-color: $background-color-lightgray;
-    color: black;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    border-radius: 20px;
-    margin: 0 100px;
-    width: auto;
-    min-width: 100px;
-    max-width: 200px;
-  }
+.time-text {
+  font-size: 28px;
 }
 
 .recipe-text {
-  font-size: $font-size-medium;
-  font-family: $font-family;
-  text-align: justify;
+  font-size: 15px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
+
+.time-intervals {
+  display: flex;
+  justify-content: flex-start;
+  margin: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.interval {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgrey;
+  color: black;
+  font-size: 10px;
+  font-weight: bold;
+  margin: 0 5px;
+}
+
+.square {
+  width: 100px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgrey;
+  color: black;
+  font-size: 15px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-weight: bold;
+  margin: 0 5px;
+}
+
+.start-time {
+  font-size: 10px;
+  background-color: lightgrey;
+  color: black;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  border-radius: 20px;
+  margin-left: 100px;
+  margin-right: 100px;
+  width: auto;
+  min-width: 100px;
+  max-width: 200px;
 }
 
 hr {
@@ -157,25 +166,33 @@ hr {
   width: 100vw;
   box-sizing: border-box;
   padding-bottom: 10%;
+}
 
-  .step {
-    display: flex;
-    align-items: flex-start;
-    padding: 0 10%;
-  }
+.step {
+  display: flex;
+  align-items: flex-start;
+  padding-left: 10%;
+  padding-right: 10%;
+}
 
-  .step1 {
-    grid-area: 1 / 1 / 2 / 2;
-  }
-  .step2 {
-    grid-area: 1 / 2 / 2 / 3;
-  }
-  .step3 {
-    grid-area: 2 / 1 / 3 / 2;
-  }
-  .step4 {
-    grid-area: 2 / 2 / 3 / 3;
-  }
+.step1 {
+  grid-area: 1/1/2/2;
+}
+
+.step2 {
+  grid-area: 1/2/2/3;
+}
+
+.step3 {
+  grid-area: 2/1/3/2;
+}
+
+.step4 {
+  grid-area: 2/2/3/3;
+}
+
+.recipe-text {
+  text-align: justify;
 }
 
 .footer {
@@ -185,33 +202,29 @@ hr {
   padding: 10px 20px;
   border-top: 1px solid #ccc;
   background-color: white;
-
-  .footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-  }
-
-  p {
-    margin: 0;
-    font-size: 14px;
-    color: black;
-    font-family: $font-family;
-  }
-
-  .social-icons {
-    display: flex;
-    gap: 15px;
-
-    img {
-      width: 20px;
-      height: 20px;
-    }
-  }
 }
 
-      
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
 
+.footer p {
+  margin: 0;
+  font-size: 14px;
+  color: black;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
 
-  
+.social-icons {
+  display: flex;
+  gap: 15px;
+}
+
+.social-icons img {
+  width: 20px;
+  height: 20px;
+}
+
